francais/exo20-23.output
Grammaire

    0 $accept: program $end

    1 program: statements

    2 statements: ε
    3           | statements statement

    4 statement: assignment
    5          | print_stmt
    6          | read_stmt
    7          | if_simple_stmt
    8          | if_else_stmt
    9          | while_stmt
   10          | do_while_stmt
   11          | switch_stmt
   12          | for_simple_stmt
   13          | for_step_stmt

   14 assignment: VARIABLE ASSIGN expression SEMICOLON

   15 print_stmt: PRINT expression SEMICOLON

   16 read_stmt: READ VARIABLE SEMICOLON

   17 if_print_then: PRINT VARIABLE SEMICOLON

   18 if_print_else: PRINT VARIABLE SEMICOLON

   19 if_else_stmt: IF LPAREN condition RPAREN THEN if_print_then ELSE if_print_else FI

   20 if_simple_stmt: IF LPAREN condition RPAREN THEN if_print_then FI

   21 while_stmt: WHILE LPAREN condition RPAREN DO statements DONE

   22 for_simple_stmt: FOR VARIABLE ASSIGN expression TO expression statements NEXT SEMICOLON

   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO expression STEP expression statements NEXT SEMICOLON

   24 do_while_stmt: DO statements WHILE LPAREN condition RPAREN SEMICOLON

   25 switch_stmt: SWITCH LPAREN VARIABLE RPAREN LBRACE case_list default_case RBRACE

   26 case_list: ε
   27          | case_list case_item

   28 case_item: CASE INTEGER COLON PRINT INTEGER SEMICOLON BREAK SEMICOLON

   29 default_case: DEFAULT COLON PRINT INTEGER SEMICOLON
   30             | ε

   31 condition: expression EQ expression
   32          | expression NE expression
   33          | expression LT expression
   34          | expression GT expression
   35          | expression LE expression
   36          | expression GE expression

   37 expression: term
   38           | expression PLUS term
   39           | expression MINUS term

   40 term: factor
   41     | term MULTIPLY factor
   42     | term DIVIDE factor
   43     | term MODULO factor

   44 factor: INTEGER
   45       | VARIABLE
   46       | LPAREN expression RPAREN
   47       | MINUS factor


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    INTEGER (258) 28 29 44
    VARIABLE (259) 14 16 17 18 22 23 25 45
    PLUS (260) 38
    MINUS (261) 39 47
    MULTIPLY (262) 41
    DIVIDE (263) 42
    MODULO (264) 43
    ASSIGN (265) 14 22 23
    SEMICOLON (266) 14 15 16 17 18 22 23 24 28 29
    EQ (267) 31
    NE (268) 32
    LT (269) 33
    GT (270) 34
    LE (271) 35
    GE (272) 36
    LPAREN (273) 19 20 21 24 25 46
    RPAREN (274) 19 20 21 24 25 46
    LBRACE (275) 25
    RBRACE (276) 25
    COLON (277) 28 29
    PRINT (278) 15 17 18 28 29
    READ (279) 16
    IF (280) 19 20
    THEN (281) 19 20
    ELSE (282) 19
    FI (283) 19 20
    WHILE (284) 21 24
    DO (285) 21 24
    DONE (286) 21
    SWITCH (287) 25
    CASE (288) 28
    DEFAULT (289) 29
    BREAK (290) 28
    FOR (291) 22 23
    TO (292) 22 23
    NEXT (293) 22 23
    STEP (294) 23
    UMINUS (295)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (41)
        à gauche: 0
    program (42)
        à gauche: 1
        à droite: 0
    statements (43)
        à gauche: 2 3
        à droite: 1 3 21 22 23 24
    statement (44)
        à gauche: 4 5 6 7 8 9 10 11 12 13
        à droite: 3
    assignment (45)
        à gauche: 14
        à droite: 4
    print_stmt (46)
        à gauche: 15
        à droite: 5
    read_stmt (47)
        à gauche: 16
        à droite: 6
    if_print_then (48)
        à gauche: 17
        à droite: 19 20
    if_print_else (49)
        à gauche: 18
        à droite: 19
    if_else_stmt (50)
        à gauche: 19
        à droite: 8
    if_simple_stmt (51)
        à gauche: 20
        à droite: 7
    while_stmt (52)
        à gauche: 21
        à droite: 9
    for_simple_stmt (53)
        à gauche: 22
        à droite: 12
    for_step_stmt (54)
        à gauche: 23
        à droite: 13
    do_while_stmt (55)
        à gauche: 24
        à droite: 10
    switch_stmt (56)
        à gauche: 25
        à droite: 11
    case_list (57)
        à gauche: 26 27
        à droite: 25 27
    case_item (58)
        à gauche: 28
        à droite: 27
    default_case (59)
        à gauche: 29 30
        à droite: 25
    condition (60)
        à gauche: 31 32 33 34 35 36
        à droite: 19 20 21 24
    expression (61)
        à gauche: 37 38 39
        à droite: 14 15 22 23 31 32 33 34 35 36 38 39 46
    term (62)
        à gauche: 40 41 42 43
        à droite: 37 38 39 41 42 43
    factor (63)
        à gauche: 44 45 46 47
        à droite: 40 41 42 43 47


État 0

    0 $accept: • program $end

    $défaut  réduction par utilisation de la règle 2 (statements)

    program     aller à l'état 1
    statements  aller à l'état 2


État 1

    0 $accept: program • $end

    $end  décalage et aller à l'état 3


État 2

    1 program: statements •
    3 statements: statements • statement

    VARIABLE  décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    READ      décalage et aller à l'état 6
    IF        décalage et aller à l'état 7
    WHILE     décalage et aller à l'état 8
    DO        décalage et aller à l'état 9
    SWITCH    décalage et aller à l'état 10
    FOR       décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 1 (program)

    statement        aller à l'état 12
    assignment       aller à l'état 13
    print_stmt       aller à l'état 14
    read_stmt        aller à l'état 15
    if_else_stmt     aller à l'état 16
    if_simple_stmt   aller à l'état 17
    while_stmt       aller à l'état 18
    for_simple_stmt  aller à l'état 19
    for_step_stmt    aller à l'état 20
    do_while_stmt    aller à l'état 21
    switch_stmt      aller à l'état 22


État 3

    0 $accept: program $end •

    $défaut  accepter


État 4

   14 assignment: VARIABLE • ASSIGN expression SEMICOLON

    ASSIGN  décalage et aller à l'état 23


État 5

   15 print_stmt: PRINT • expression SEMICOLON

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 28
    term        aller à l'état 29
    factor      aller à l'état 30


État 6

   16 read_stmt: READ • VARIABLE SEMICOLON

    VARIABLE  décalage et aller à l'état 31


État 7

   19 if_else_stmt: IF • LPAREN condition RPAREN THEN if_print_then ELSE if_print_else FI
   20 if_simple_stmt: IF • LPAREN condition RPAREN THEN if_print_then FI

    LPAREN  décalage et aller à l'état 32


État 8

   21 while_stmt: WHILE • LPAREN condition RPAREN DO statements DONE

    LPAREN  décalage et aller à l'état 33


État 9

   24 do_while_stmt: DO • statements WHILE LPAREN condition RPAREN SEMICOLON

    $défaut  réduction par utilisation de la règle 2 (statements)

    statements  aller à l'état 34


État 10

   25 switch_stmt: SWITCH • LPAREN VARIABLE RPAREN LBRACE case_list default_case RBRACE

    LPAREN  décalage et aller à l'état 35


État 11

   22 for_simple_stmt: FOR • VARIABLE ASSIGN expression TO expression statements NEXT SEMICOLON
   23 for_step_stmt: FOR • VARIABLE ASSIGN expression TO expression STEP expression statements NEXT SEMICOLON

    VARIABLE  décalage et aller à l'état 36


État 12

    3 statements: statements statement •

    $défaut  réduction par utilisation de la règle 3 (statements)


État 13

    4 statement: assignment •

    $défaut  réduction par utilisation de la règle 4 (statement)


État 14

    5 statement: print_stmt •

    $défaut  réduction par utilisation de la règle 5 (statement)


État 15

    6 statement: read_stmt •

    $défaut  réduction par utilisation de la règle 6 (statement)


État 16

    8 statement: if_else_stmt •

    $défaut  réduction par utilisation de la règle 8 (statement)


État 17

    7 statement: if_simple_stmt •

    $défaut  réduction par utilisation de la règle 7 (statement)


État 18

    9 statement: while_stmt •

    $défaut  réduction par utilisation de la règle 9 (statement)


État 19

   12 statement: for_simple_stmt •

    $défaut  réduction par utilisation de la règle 12 (statement)


État 20

   13 statement: for_step_stmt •

    $défaut  réduction par utilisation de la règle 13 (statement)


État 21

   10 statement: do_while_stmt •

    $défaut  réduction par utilisation de la règle 10 (statement)


État 22

   11 statement: switch_stmt •

    $défaut  réduction par utilisation de la règle 11 (statement)


État 23

   14 assignment: VARIABLE ASSIGN • expression SEMICOLON

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 37
    term        aller à l'état 29
    factor      aller à l'état 30


État 24

   44 factor: INTEGER •

    $défaut  réduction par utilisation de la règle 44 (factor)


État 25

   45 factor: VARIABLE •

    $défaut  réduction par utilisation de la règle 45 (factor)


État 26

   47 factor: MINUS • factor

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    factor  aller à l'état 38


État 27

   46 factor: LPAREN • expression RPAREN

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 39
    term        aller à l'état 29
    factor      aller à l'état 30


État 28

   15 print_stmt: PRINT expression • SEMICOLON
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS       décalage et aller à l'état 40
    MINUS      décalage et aller à l'état 41
    SEMICOLON  décalage et aller à l'état 42


État 29

   37 expression: term •
   41 term: term • MULTIPLY factor
   42     | term • DIVIDE factor
   43     | term • MODULO factor

    MULTIPLY  décalage et aller à l'état 43
    DIVIDE    décalage et aller à l'état 44
    MODULO    décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 37 (expression)


État 30

   40 term: factor •

    $défaut  réduction par utilisation de la règle 40 (term)


État 31

   16 read_stmt: READ VARIABLE • SEMICOLON

    SEMICOLON  décalage et aller à l'état 46


État 32

   19 if_else_stmt: IF LPAREN • condition RPAREN THEN if_print_then ELSE if_print_else FI
   20 if_simple_stmt: IF LPAREN • condition RPAREN THEN if_print_then FI

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    condition   aller à l'état 47
    expression  aller à l'état 48
    term        aller à l'état 29
    factor      aller à l'état 30


État 33

   21 while_stmt: WHILE LPAREN • condition RPAREN DO statements DONE

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    condition   aller à l'état 49
    expression  aller à l'état 48
    term        aller à l'état 29
    factor      aller à l'état 30


État 34

    3 statements: statements • statement
   24 do_while_stmt: DO statements • WHILE LPAREN condition RPAREN SEMICOLON

    VARIABLE  décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    READ      décalage et aller à l'état 6
    IF        décalage et aller à l'état 7
    WHILE     décalage et aller à l'état 50
    DO        décalage et aller à l'état 9
    SWITCH    décalage et aller à l'état 10
    FOR       décalage et aller à l'état 11

    statement        aller à l'état 12
    assignment       aller à l'état 13
    print_stmt       aller à l'état 14
    read_stmt        aller à l'état 15
    if_else_stmt     aller à l'état 16
    if_simple_stmt   aller à l'état 17
    while_stmt       aller à l'état 18
    for_simple_stmt  aller à l'état 19
    for_step_stmt    aller à l'état 20
    do_while_stmt    aller à l'état 21
    switch_stmt      aller à l'état 22


État 35

   25 switch_stmt: SWITCH LPAREN • VARIABLE RPAREN LBRACE case_list default_case RBRACE

    VARIABLE  décalage et aller à l'état 51


État 36

   22 for_simple_stmt: FOR VARIABLE • ASSIGN expression TO expression statements NEXT SEMICOLON
   23 for_step_stmt: FOR VARIABLE • ASSIGN expression TO expression STEP expression statements NEXT SEMICOLON

    ASSIGN  décalage et aller à l'état 52


État 37

   14 assignment: VARIABLE ASSIGN expression • SEMICOLON
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS       décalage et aller à l'état 40
    MINUS      décalage et aller à l'état 41
    SEMICOLON  décalage et aller à l'état 53


État 38

   47 factor: MINUS factor •

    $défaut  réduction par utilisation de la règle 47 (factor)


État 39

   38 expression: expression • PLUS term
   39           | expression • MINUS term
   46 factor: LPAREN expression • RPAREN

    PLUS    décalage et aller à l'état 40
    MINUS   décalage et aller à l'état 41
    RPAREN  décalage et aller à l'état 54


État 40

   38 expression: expression PLUS • term

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    term    aller à l'état 55
    factor  aller à l'état 30


État 41

   39 expression: expression MINUS • term

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    term    aller à l'état 56
    factor  aller à l'état 30


État 42

   15 print_stmt: PRINT expression SEMICOLON •

    $défaut  réduction par utilisation de la règle 15 (print_stmt)


État 43

   41 term: term MULTIPLY • factor

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    factor  aller à l'état 57


État 44

   42 term: term DIVIDE • factor

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    factor  aller à l'état 58


État 45

   43 term: term MODULO • factor

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    factor  aller à l'état 59


État 46

   16 read_stmt: READ VARIABLE SEMICOLON •

    $défaut  réduction par utilisation de la règle 16 (read_stmt)


État 47

   19 if_else_stmt: IF LPAREN condition • RPAREN THEN if_print_then ELSE if_print_else FI
   20 if_simple_stmt: IF LPAREN condition • RPAREN THEN if_print_then FI

    RPAREN  décalage et aller à l'état 60


État 48

   31 condition: expression • EQ expression
   32          | expression • NE expression
   33          | expression • LT expression
   34          | expression • GT expression
   35          | expression • LE expression
   36          | expression • GE expression
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41
    EQ     décalage et aller à l'état 61
    NE     décalage et aller à l'état 62
    LT     décalage et aller à l'état 63
    GT     décalage et aller à l'état 64
    LE     décalage et aller à l'état 65
    GE     décalage et aller à l'état 66


État 49

   21 while_stmt: WHILE LPAREN condition • RPAREN DO statements DONE

    RPAREN  décalage et aller à l'état 67


État 50

   21 while_stmt: WHILE • LPAREN condition RPAREN DO statements DONE
   24 do_while_stmt: DO statements WHILE • LPAREN condition RPAREN SEMICOLON

    LPAREN  décalage et aller à l'état 68


État 51

   25 switch_stmt: SWITCH LPAREN VARIABLE • RPAREN LBRACE case_list default_case RBRACE

    RPAREN  décalage et aller à l'état 69


État 52

   22 for_simple_stmt: FOR VARIABLE ASSIGN • expression TO expression statements NEXT SEMICOLON
   23 for_step_stmt: FOR VARIABLE ASSIGN • expression TO expression STEP expression statements NEXT SEMICOLON

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 70
    term        aller à l'état 29
    factor      aller à l'état 30


État 53

   14 assignment: VARIABLE ASSIGN expression SEMICOLON •

    $défaut  réduction par utilisation de la règle 14 (assignment)


État 54

   46 factor: LPAREN expression RPAREN •

    $défaut  réduction par utilisation de la règle 46 (factor)


État 55

   38 expression: expression PLUS term •
   41 term: term • MULTIPLY factor
   42     | term • DIVIDE factor
   43     | term • MODULO factor

    MULTIPLY  décalage et aller à l'état 43
    DIVIDE    décalage et aller à l'état 44
    MODULO    décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 38 (expression)


État 56

   39 expression: expression MINUS term •
   41 term: term • MULTIPLY factor
   42     | term • DIVIDE factor
   43     | term • MODULO factor

    MULTIPLY  décalage et aller à l'état 43
    DIVIDE    décalage et aller à l'état 44
    MODULO    décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 39 (expression)


État 57

   41 term: term MULTIPLY factor •

    $défaut  réduction par utilisation de la règle 41 (term)


État 58

   42 term: term DIVIDE factor •

    $défaut  réduction par utilisation de la règle 42 (term)


État 59

   43 term: term MODULO factor •

    $défaut  réduction par utilisation de la règle 43 (term)


État 60

   19 if_else_stmt: IF LPAREN condition RPAREN • THEN if_print_then ELSE if_print_else FI
   20 if_simple_stmt: IF LPAREN condition RPAREN • THEN if_print_then FI

    THEN  décalage et aller à l'état 71


État 61

   31 condition: expression EQ • expression

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 72
    term        aller à l'état 29
    factor      aller à l'état 30


État 62

   32 condition: expression NE • expression

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 73
    term        aller à l'état 29
    factor      aller à l'état 30


État 63

   33 condition: expression LT • expression

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 74
    term        aller à l'état 29
    factor      aller à l'état 30


État 64

   34 condition: expression GT • expression

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 75
    term        aller à l'état 29
    factor      aller à l'état 30


État 65

   35 condition: expression LE • expression

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 76
    term        aller à l'état 29
    factor      aller à l'état 30


État 66

   36 condition: expression GE • expression

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 77
    term        aller à l'état 29
    factor      aller à l'état 30


État 67

   21 while_stmt: WHILE LPAREN condition RPAREN • DO statements DONE

    DO  décalage et aller à l'état 78


État 68

   21 while_stmt: WHILE LPAREN • condition RPAREN DO statements DONE
   24 do_while_stmt: DO statements WHILE LPAREN • condition RPAREN SEMICOLON

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    condition   aller à l'état 79
    expression  aller à l'état 48
    term        aller à l'état 29
    factor      aller à l'état 30


État 69

   25 switch_stmt: SWITCH LPAREN VARIABLE RPAREN • LBRACE case_list default_case RBRACE

    LBRACE  décalage et aller à l'état 80


État 70

   22 for_simple_stmt: FOR VARIABLE ASSIGN expression • TO expression statements NEXT SEMICOLON
   23 for_step_stmt: FOR VARIABLE ASSIGN expression • TO expression STEP expression statements NEXT SEMICOLON
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41
    TO     décalage et aller à l'état 81


État 71

   19 if_else_stmt: IF LPAREN condition RPAREN THEN • if_print_then ELSE if_print_else FI
   20 if_simple_stmt: IF LPAREN condition RPAREN THEN • if_print_then FI

    PRINT  décalage et aller à l'état 82

    if_print_then  aller à l'état 83


État 72

   31 condition: expression EQ expression •
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 31 (condition)


État 73

   32 condition: expression NE expression •
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 32 (condition)


État 74

   33 condition: expression LT expression •
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 33 (condition)


État 75

   34 condition: expression GT expression •
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 34 (condition)


État 76

   35 condition: expression LE expression •
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 35 (condition)


État 77

   36 condition: expression GE expression •
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 36 (condition)


État 78

   21 while_stmt: WHILE LPAREN condition RPAREN DO • statements DONE

    $défaut  réduction par utilisation de la règle 2 (statements)

    statements  aller à l'état 84


État 79

   21 while_stmt: WHILE LPAREN condition • RPAREN DO statements DONE
   24 do_while_stmt: DO statements WHILE LPAREN condition • RPAREN SEMICOLON

    RPAREN  décalage et aller à l'état 85


État 80

   25 switch_stmt: SWITCH LPAREN VARIABLE RPAREN LBRACE • case_list default_case RBRACE

    $défaut  réduction par utilisation de la règle 26 (case_list)

    case_list  aller à l'état 86


État 81

   22 for_simple_stmt: FOR VARIABLE ASSIGN expression TO • expression statements NEXT SEMICOLON
   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO • expression STEP expression statements NEXT SEMICOLON

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 87
    term        aller à l'état 29
    factor      aller à l'état 30


État 82

   17 if_print_then: PRINT • VARIABLE SEMICOLON

    VARIABLE  décalage et aller à l'état 88


État 83

   19 if_else_stmt: IF LPAREN condition RPAREN THEN if_print_then • ELSE if_print_else FI
   20 if_simple_stmt: IF LPAREN condition RPAREN THEN if_print_then • FI

    ELSE  décalage et aller à l'état 89
    FI    décalage et aller à l'état 90


État 84

    3 statements: statements • statement
   21 while_stmt: WHILE LPAREN condition RPAREN DO statements • DONE

    VARIABLE  décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    READ      décalage et aller à l'état 6
    IF        décalage et aller à l'état 7
    WHILE     décalage et aller à l'état 8
    DO        décalage et aller à l'état 9
    DONE      décalage et aller à l'état 91
    SWITCH    décalage et aller à l'état 10
    FOR       décalage et aller à l'état 11

    statement        aller à l'état 12
    assignment       aller à l'état 13
    print_stmt       aller à l'état 14
    read_stmt        aller à l'état 15
    if_else_stmt     aller à l'état 16
    if_simple_stmt   aller à l'état 17
    while_stmt       aller à l'état 18
    for_simple_stmt  aller à l'état 19
    for_step_stmt    aller à l'état 20
    do_while_stmt    aller à l'état 21
    switch_stmt      aller à l'état 22


État 85

   21 while_stmt: WHILE LPAREN condition RPAREN • DO statements DONE
   24 do_while_stmt: DO statements WHILE LPAREN condition RPAREN • SEMICOLON

    SEMICOLON  décalage et aller à l'état 92
    DO         décalage et aller à l'état 78


État 86

   25 switch_stmt: SWITCH LPAREN VARIABLE RPAREN LBRACE case_list • default_case RBRACE
   27 case_list: case_list • case_item

    CASE     décalage et aller à l'état 93
    DEFAULT  décalage et aller à l'état 94

    $défaut  réduction par utilisation de la règle 30 (default_case)

    case_item     aller à l'état 95
    default_case  aller à l'état 96


État 87

   22 for_simple_stmt: FOR VARIABLE ASSIGN expression TO expression • statements NEXT SEMICOLON
   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO expression • STEP expression statements NEXT SEMICOLON
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41
    STEP   décalage et aller à l'état 97

    $défaut  réduction par utilisation de la règle 2 (statements)

    statements  aller à l'état 98


État 88

   17 if_print_then: PRINT VARIABLE • SEMICOLON

    SEMICOLON  décalage et aller à l'état 99


État 89

   19 if_else_stmt: IF LPAREN condition RPAREN THEN if_print_then ELSE • if_print_else FI

    PRINT  décalage et aller à l'état 100

    if_print_else  aller à l'état 101


État 90

   20 if_simple_stmt: IF LPAREN condition RPAREN THEN if_print_then FI •

    $défaut  réduction par utilisation de la règle 20 (if_simple_stmt)


État 91

   21 while_stmt: WHILE LPAREN condition RPAREN DO statements DONE •

    $défaut  réduction par utilisation de la règle 21 (while_stmt)


État 92

   24 do_while_stmt: DO statements WHILE LPAREN condition RPAREN SEMICOLON •

    $défaut  réduction par utilisation de la règle 24 (do_while_stmt)


État 93

   28 case_item: CASE • INTEGER COLON PRINT INTEGER SEMICOLON BREAK SEMICOLON

    INTEGER  décalage et aller à l'état 102


État 94

   29 default_case: DEFAULT • COLON PRINT INTEGER SEMICOLON

    COLON  décalage et aller à l'état 103


État 95

   27 case_list: case_list case_item •

    $défaut  réduction par utilisation de la règle 27 (case_list)


État 96

   25 switch_stmt: SWITCH LPAREN VARIABLE RPAREN LBRACE case_list default_case • RBRACE

    RBRACE  décalage et aller à l'état 104


État 97

   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO expression STEP • expression statements NEXT SEMICOLON

    INTEGER   décalage et aller à l'état 24
    VARIABLE  décalage et aller à l'état 25
    MINUS     décalage et aller à l'état 26
    LPAREN    décalage et aller à l'état 27

    expression  aller à l'état 105
    term        aller à l'état 29
    factor      aller à l'état 30


État 98

    3 statements: statements • statement
   22 for_simple_stmt: FOR VARIABLE ASSIGN expression TO expression statements • NEXT SEMICOLON

    VARIABLE  décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    READ      décalage et aller à l'état 6
    IF        décalage et aller à l'état 7
    WHILE     décalage et aller à l'état 8
    DO        décalage et aller à l'état 9
    SWITCH    décalage et aller à l'état 10
    FOR       décalage et aller à l'état 11
    NEXT      décalage et aller à l'état 106

    statement        aller à l'état 12
    assignment       aller à l'état 13
    print_stmt       aller à l'état 14
    read_stmt        aller à l'état 15
    if_else_stmt     aller à l'état 16
    if_simple_stmt   aller à l'état 17
    while_stmt       aller à l'état 18
    for_simple_stmt  aller à l'état 19
    for_step_stmt    aller à l'état 20
    do_while_stmt    aller à l'état 21
    switch_stmt      aller à l'état 22


État 99

   17 if_print_then: PRINT VARIABLE SEMICOLON •

    $défaut  réduction par utilisation de la règle 17 (if_print_then)


État 100

   18 if_print_else: PRINT • VARIABLE SEMICOLON

    VARIABLE  décalage et aller à l'état 107


État 101

   19 if_else_stmt: IF LPAREN condition RPAREN THEN if_print_then ELSE if_print_else • FI

    FI  décalage et aller à l'état 108


État 102

   28 case_item: CASE INTEGER • COLON PRINT INTEGER SEMICOLON BREAK SEMICOLON

    COLON  décalage et aller à l'état 109


État 103

   29 default_case: DEFAULT COLON • PRINT INTEGER SEMICOLON

    PRINT  décalage et aller à l'état 110


État 104

   25 switch_stmt: SWITCH LPAREN VARIABLE RPAREN LBRACE case_list default_case RBRACE •

    $défaut  réduction par utilisation de la règle 25 (switch_stmt)


État 105

   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO expression STEP expression • statements NEXT SEMICOLON
   38 expression: expression • PLUS term
   39           | expression • MINUS term

    PLUS   décalage et aller à l'état 40
    MINUS  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 2 (statements)

    statements  aller à l'état 111


État 106

   22 for_simple_stmt: FOR VARIABLE ASSIGN expression TO expression statements NEXT • SEMICOLON

    SEMICOLON  décalage et aller à l'état 112


État 107

   18 if_print_else: PRINT VARIABLE • SEMICOLON

    SEMICOLON  décalage et aller à l'état 113


État 108

   19 if_else_stmt: IF LPAREN condition RPAREN THEN if_print_then ELSE if_print_else FI •

    $défaut  réduction par utilisation de la règle 19 (if_else_stmt)


État 109

   28 case_item: CASE INTEGER COLON • PRINT INTEGER SEMICOLON BREAK SEMICOLON

    PRINT  décalage et aller à l'état 114


État 110

   29 default_case: DEFAULT COLON PRINT • INTEGER SEMICOLON

    INTEGER  décalage et aller à l'état 115


État 111

    3 statements: statements • statement
   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO expression STEP expression statements • NEXT SEMICOLON

    VARIABLE  décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    READ      décalage et aller à l'état 6
    IF        décalage et aller à l'état 7
    WHILE     décalage et aller à l'état 8
    DO        décalage et aller à l'état 9
    SWITCH    décalage et aller à l'état 10
    FOR       décalage et aller à l'état 11
    NEXT      décalage et aller à l'état 116

    statement        aller à l'état 12
    assignment       aller à l'état 13
    print_stmt       aller à l'état 14
    read_stmt        aller à l'état 15
    if_else_stmt     aller à l'état 16
    if_simple_stmt   aller à l'état 17
    while_stmt       aller à l'état 18
    for_simple_stmt  aller à l'état 19
    for_step_stmt    aller à l'état 20
    do_while_stmt    aller à l'état 21
    switch_stmt      aller à l'état 22


État 112

   22 for_simple_stmt: FOR VARIABLE ASSIGN expression TO expression statements NEXT SEMICOLON •

    $défaut  réduction par utilisation de la règle 22 (for_simple_stmt)


État 113

   18 if_print_else: PRINT VARIABLE SEMICOLON •

    $défaut  réduction par utilisation de la règle 18 (if_print_else)


État 114

   28 case_item: CASE INTEGER COLON PRINT • INTEGER SEMICOLON BREAK SEMICOLON

    INTEGER  décalage et aller à l'état 117


État 115

   29 default_case: DEFAULT COLON PRINT INTEGER • SEMICOLON

    SEMICOLON  décalage et aller à l'état 118


État 116

   23 for_step_stmt: FOR VARIABLE ASSIGN expression TO expression STEP expression statements NEXT • SEMICOLON
